fixed button spacing

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -231,6 +231,10 @@ dd{
 		display: none;
 	}
 	
+	.gal-btn{
+		display: none;
+	}
+	
 	.mobile{
 		display: block;
 	}
